--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+decorator==5.1.0
 Flask==1.0.2
+idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 prometheus-client==0.9.0
+py==1.10.0
+ratelimit==2.2.1
 requests==2.25.1
+retry==0.9.2
+urllib3==1.26.6
+Werkzeug==2.0.1
